--- a/projectyasmien/map.html
+++ b/projectyasmien/map.html
@@ -22,7 +22,7 @@
         <div>
             <div id="sidebar">
                 <img src="./Logo mapid warna.png" width="170" height="50"><br><br>
-                Penggunaan Lahan Kota Denpasar <br><br>
+                Kota Denpasar <br><br>
                 <button id="btn-toggle-penggunaan" class="button-change" onclick="hideLayer()">Hide</button>
             </div>
             <div id="map">
